# Platformer

./: LICENSE  README.md
assets/testSprites/: EditMap.xcf
src/: :w  ;  CMakeLists.txt  \  animationContainer.cpp  animationContainer.h  app.cpp  app.h  component.cpp  component.h  componentArray.h  componentManager.h  entity.h  entityManager.cpp  entityManager.h  main.cpp  map.cpp  map.h  premake5.lua  system.cpp  system.h  tex_manager.cpp  tex_manager.h
src/.cache/clangd/index/: app.cpp.3E8EF2BBBA5C92FE.idx  app.h.687A96591ADD1D6E.idx  component.cpp.3216E05FC07AFA8C.idx  component.h.39E9044B8D5466E4.idx  componentArray.h.DD77F43A5D25E770.idx  componentManager.h.A5D4ED3D070109FD.idx  entity.h.4250DE8C1577BEAC.idx  entityManager.cpp.DF4F69F7A58FD5BD.idx  entityManager.h.C5BADCE51EE8B9C5.idx  main.cpp.73248BBBB550F180.idx  map.cpp.42E04825D79E5F87.idx  map.h.7C4A42E3F8A6407E.idx  system.cpp.9DEFF5C6458DBD3C.idx  system.h.6696DBF3078F4410.idx  tex_manager.cpp.AC4DDD020DC60CDB.idx  tex_manager.h.13E2350F0496E8C5.idx
